RESOLVED FIXED 263571
[WebGPU] RenderBundleEncoder does not set m_primitiveType
https://bugs.webkit.org/show_bug.cgi?id=263571
Summary [WebGPU] RenderBundleEncoder does not set m_primitiveType
Mike Wyrzykowski
Reported 2023-10-23 17:30:26 PDT
[WebGPU] RenderBundleEncoder does not set m_primitiveType
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-23 17:30:47 PDT
Mike Wyrzykowski
Comment 2 2023-10-24 08:36:47 PDT
EWS
Comment 3 2023-10-24 12:01:21 PDT
Committed 269726@main (1111ac2afe49): <https://commits.webkit.org/269726@main> Reviewed commits have been landed. Closing PR #19487 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.