[WebGPU] RenderBundleEncoder does not set m_primitiveType https://bugs.webkit.org/show_bug.cgi?id=263571 <radar://117382676>

Reviewed by Tadeu Zagallo.

Unintentional omission in caching the primitive type.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::setPipeline):

Canonical link: https://commits.webkit.org/269726@main